--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap');
 
 body {
-    /*text-align: center; */ 
+    text-align: center; 
     background-image: url('Pictures/backdrop.jpg'); 
     background-repeat: no-repeat;
     background-position: center center; 
     background-size: cover; 
     background-attachment: fixed;
-    /*potenitally irrelevant text-align: center;*/
     font-family: 'Viaoda Libre', sans-serif;
     font-weight: 300 !important
     margin: 0px;
@@ -36,7 +35,7 @@ body >  footer > center{
 }
 
 #site-title{
-  /* border: 1px solid #000; */
+  border: 1px solid #000;
   font-family: 'Akaya Kanadaka', cursive;
   border-top: none;
   border-bottom: 2px solid #000;
