--- a/galleryStyle.css
+++ b/galleryStyle.css
@@ -1,47 +1,124 @@
         .button {
-            border: none;
-            color: white;
-            padding: 16px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            transition-duration: 0.4s;
-            cursor: pointer;
+          border: none;
+          color: white;
+          padding: 16px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          transition-duration: 0.4s;
+          cursor: pointer;
         }
         
         .button1 {
-            background-color: white;
-            color: black;
-            border: 2px solid #012613;
+          background-color: white;
+          color: black;
+          border: 2px solid #012613;
         }
 
         .button1:hover {
-            background-color: #012613;
-            color: white;
+          background-color: #012613;
+          color: white;
         }
         
         body{
-            text-align: center;
-            font-family: times new roman;
-            background-color: lavender;
+          text-align: center;
+          font-family: times new roman;
+          background-image: url('Pictures/backdrop.jpg'); 
+          background-repeat: no-repeat;
+          background-position: center center; 
+          background-size: cover; 
+          background-attachment: fixed;
         }
         
         #pageTitle{
-            color: goldenrod;
+          color: goldenrod;
         }
         
         .galleryPhoto{
-            width: 300px; length: 300px;
+          width: 300px; 
+          height: 300px;
+        }
+
+        .person-info{
+          margin-left:40px;
+          margin-right: 40px;
         }
         
         #form{
-           font-family: times new roman;
-           text-align: center;
+          font-family: times new roman;
+          text-align: center;
         }
         
         body > h3{
-            color: indianred;
+          color: indianred;
         }
+
+        .topnav {
+          overflow: hidden;
+          }
+          
+        .topnav a {
+          float: left;
+          display: block;
+          color: rgba(247, 235, 235, 0.829);
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17.5px;
+        }
+        
+        .topnav a:hover {
+          color: rgb(88, 26, 26);
+        }
+        
+        .topnav a.active {
+          background-color: #643324;
+          color: rgba(247, 235, 235, 0.829);
+        }
+        
+        .topnav .icon {
+          display: none;
+        }
+
+        .first{
+          width: 80%;
+          margin-left: auto;
+          margin-right: auto;
+        }
+
+        .second{
+          margin-left: auto;
+          margin-right: auto;
+          border:none;
+          border-top:1px dotted rgb(85, 99, 52);
+          color:#fff;
+          background-color:#fff;
+          height:1px;
+          width:70%;
+        }
+
+        @media screen and (max-width: 600px) {
+              .topnav a:not(:first-child) {display: none;}
+              .topnav a.icon {
+              float: right;
+              display: block;
+            }
+        }
+          
+        @media screen and (max-width: 600px) {
+              .topnav.responsive {position: relative;}
+              .topnav.responsive a.icon {
+              position: absolute;
+              right: 0;
+              top: 0;
+              }
+              .topnav.responsive a {
+              float: none;
+              display: block;
+              text-align: left;
+            }
+        }
+
         
