--- a/gendernormsStyle.css
+++ b/gendernormsStyle.css
@@ -2,6 +2,11 @@
                 font-family: Times New Roman;
                 text-align: center;
                 background-color: lavenderblush;
+                background-image: url('Pictures/backdrop.jpg'); 
+                background-repeat: no-repeat;
+                background-position: center center; 
+                background-size: cover; 
+                background-attachment: fixed;
             }
             
             #pageTitle {
@@ -10,7 +15,7 @@
             
             #photoID {
                 width: 300px;
-                length: 300px;
+                height: 300px;
             }
             
             .heads{
@@ -19,5 +24,54 @@
             
             body > i{
                 font-size: 33px;
-                color: teal;
+                color: rgb(255, 28, 58);
             }
+
+            .topnav {
+                overflow: hidden;
+              }
+              
+              .topnav a {
+                float: left;
+                display: block;
+                color: rgba(247, 235, 235, 0.829);
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17.5px;
+              }
+              
+              .topnav a:hover {
+                color: rgb(88, 26, 26);
+              }
+              
+              .topnav a.active {
+                background-color: #643324;
+                color: rgba(247, 235, 235, 0.829);
+              }
+              
+              .topnav .icon {
+                display: none;
+              }
+
+                @media screen and (max-width: 600px) {
+                    .topnav a:not(:first-child) {display: none;}
+                    .topnav a.icon {
+                    float: right;
+                    display: block;
+                    }
+                }
+                
+                @media screen and (max-width: 600px) {
+                    .topnav.responsive {position: relative;}
+                    .topnav.responsive a.icon {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    }
+                    .topnav.responsive a {
+                    float: none;
+                    display: block;
+                    text-align: left;
+                    }
+                }
