--- a/linksStyle.css
+++ b/linksStyle.css
@@ -3,8 +3,13 @@
             }
             
             body{
-                background-color: oldlace;  /* Replace this with the proper background */
+                /* background-color: oldlace; */
                 text-align: center;
+                background-image: url('Pictures/backdrop.jpg'); 
+                background-repeat: no-repeat;
+                background-position: center center; 
+                background-size: cover; 
+                background-attachment: fixed;
             }
             
             h1{
@@ -13,11 +18,11 @@
             
             #womenPic{
                 width: 450px;
-                length: 450px;
+                height: 450px;
             }
             
             .header{
-                color: lightseagreen;
+                color: rgb(90, 51, 6);
             }
             
             body > p {
@@ -25,12 +30,68 @@
             }
             
             #Footer_tag{
-                colour:black;
+                color:rgb(77, 9, 46);
                 font: timesNewRoman;
                 text-align: center;
             }
             
             #Footer_pic{
                 width: 50px;
-                length: 50px;
+                height: 50px;
             }
+
+            .topnav {
+                overflow: hidden;
+              }
+              
+              .topnav a {
+                float: left;
+                display: block;
+                color: rgba(247, 235, 235, 0.829);
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17.5px;
+              }
+              
+              .topnav a:hover {
+                color: rgb(88, 26, 26);
+              }
+              
+              .topnav a.active {
+                background-color: #643324;
+                color: rgba(247, 235, 235, 0.829);
+              }
+              
+              .topnav .icon {
+                display: none;
+              }
+
+                @media screen and (max-width: 600px) {
+                    .topnav a:not(:first-child) {display: none;}
+                    .topnav a.icon {
+                    float: right;
+                    display: block;
+                    }
+                }
+                
+                @media screen and (max-width: 600px) {
+                    .topnav.responsive {position: relative;}
+                    .topnav.responsive a.icon {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    }
+                    .topnav.responsive a {
+                    float: none;
+                    display: block;
+                    text-align: left;
+                    }
+                }
+
+              .link-info{
+                width: 1100px;
+                margin-left: 60px;
+                margin-top: 60px;
+                }
+
