--- a/masculinityStyle.css
+++ b/masculinityStyle.css
@@ -1,75 +1,95 @@
 
-            body{
-                font-family: Times New Roman;
-                text-align: center;
-                /* background-color: aliceblue; */
-                background-image: url('Pictures/backdrop.jpg'); 
-                background-repeat: no-repeat;
-                background-position: center center; 
-                background-size: cover; 
-                background-attachment: fixed;
-            }
-            
-            #title{
-                color: rgb(255, 204, 204);
-                font-family: Courier New;
-            }
-            
-            .sectionHeader{
-                font-family: Courier New;
-                color: rgb(83, 20, 95);
-            }
-            
-            body > section > p{
-                font-size: 20px;
-            }
+body{
+    font-family: Times New Roman;
+    text-align: center;
+    /* background-color: aliceblue; */
+    background-image: url('Pictures/backdrop.jpg'); 
+    background-repeat: no-repeat;
+    background-position: center center; 
+    background-size: cover; 
+    background-attachment: fixed;
+}
 
-            .topnav {
-                overflow: hidden;
-              }
-              
-              .topnav a {
-                float: left;
-                display: block;
-                color: rgba(247, 235, 235, 0.829);
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-                font-size: 17.5px;
-              }
-              
-              .topnav a:hover {
-                color: rgb(88, 26, 26);
-              }
-              
-              .topnav a.active {
-                background-color: #643324;
-                color: rgba(247, 235, 235, 0.829);
-              }
-              
-              .topnav .icon {
-                display: none;
-              }
+a{
+  color:#643324;
+  text-decoration: none;
+}
 
-                @media screen and (max-width: 600px) {
-                    .topnav a:not(:first-child) {display: none;}
-                    .topnav a.icon {
-                    float: right;
-                    display: block;
-                    }
-                }
-                
-                @media screen and (max-width: 600px) {
-                    .topnav.responsive {position: relative;}
-                    .topnav.responsive a.icon {
-                    position: absolute;
-                    right: 0;
-                    top: 0;
-                    }
-                    .topnav.responsive a {
-                    float: none;
-                    display: block;
-                    text-align: left;
-                    }
-                }
+#title{
+    color: rgb(255, 204, 204);
+    font-family: Courier New;
+}
+
+.sectionHeader{
+    font-family: Courier New;
+    color: rgb(83, 20, 95);
+}
+
+body > section > p{
+    font-size: 20px;
+}
+
+.topnav {
+    overflow: hidden;
+}
+  
+.topnav a {
+  float: left;
+  display: block;
+  color: rgba(247, 235, 235, 0.829);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17.5px;
+}
+
+.topnav a:hover {
+  color: rgb(88, 26, 26);
+}
+
+.topnav a.active {
+  background-color: #643324;
+  color: rgba(247, 235, 235, 0.829);
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+    float: right;
+    display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    }
+    .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    }
+}
+
+.color-mode-control{
+  cursor: pointer;
+  border: 1px solid #555;
+  text-align: center;
+  padding: 5px;
+  margin-left: 1100px;
+  padding: 0px;
+}
+
+.dark{
+  background-image: none;
+  background-color: #222;
+  color: #e6e6e6;
+}
 
